    * 0883 Added Date / Time to HTML notification email
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...

    Reporting & Availability:
    * 0756 Allow availability of multisite BI aggregates at once...

    Livestatus:
    * 0747 FIX: livestatus table hostsbygroup: fixed bug with group_authorization strict...


1.2.5i2:
    Checks & Agents:
    * 0147 enterasys_fans: New Check to monitor fans of enterasys swichtes
    * 0773 ibm_svc_system: new check for System Info of IBM SVC / V7000 devices
    * 0774 ibm_svc_nodestats.diskio: new check for disk troughput per node on IBM SVC / V7000 devices
    * 0775 ibm_svc_systemstats.diskio: new check for disk throughput in IBM SVC / V7000 devices in total
    * 0764 lnx_quota: Added new check to monitor Linux File System Quota...
    * 0776 ibm_svc_nodestats.cpu_util: new check for CPU Utilization per Node on IBM SVC / V7000 devices
    * 0600 nfsexports.solaris: new agent plugin for monitoring nfs exports on solaris systems...
    * 0743 mem, fortigate_memory, solaris_mem: display total SWAP info in check output
    * 0745 drbd: Roles and diskstates are now configurable via WATO...
    * 0740 FIX: winperf_if: now able to handle bandwidth > 4GBit...

    Multisite:
    * 0765 NagVis-Maps-Snapin: Now visualizes downtime / acknowledgment states of maps...
    * 0766 FIX: Changed transid implemtation to work as CSRF protection (Fixes CVE-2014-2330)...

    WATO:
    * 0767 FIX: Signing and verification of WATO snapshot (addresses CVE-2014-2330)...

    BI:
    * 0741 FIX: BI editor: fixed display bug in "Create nodes based on a service search"...

    Livestatus:
    * 0742 FIX: table statehist: now able to cancel a running query if limit is reached...


1.2.5i1:
    Core & Setup:
    * 0386 Added all active checks to check_mk -L output...
    * 0452 Speedup generation of configuration...