@@ -1,0 +1,18 @@
+Title: New option for writing all messages into a syslog-like logfile
+Level: 1
+Component: ec
+Version: 1.2.5i3
+Date: 1397482457
+Class: feature
+
+The new Event Console global option <i>Syslog-like message logging</i> will enable
+logging of <b>all</b> incoming events into logfiles that have syslog format.
+These files will be stored below <tt>var/check_mk/mkeventd/messages</tt> and will
+be named with the same scheme as the history logfiles. They will adopt the same
+rotation principle as the history files.
+
+If you are using Check_MK in a non-OMD environment and enable this option then
+please make sure that you have some logrotate configuration or similar for
+deleting outdated files.
+
+If you are using OMD then consider enabling the global <i>Diskspace Cleanup</i>.
